<resources>
    <string name="app_name">Supernote</string>

    <!-- Action Bar strings -->
    <string name="action_search">Search</string>
    <string name="action_add_user_notification">user notification</string>
    <string name="action_add_current_contact">Add Contact</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_note">new note</string>
    <string name="action_contact">contact</string>
    <string name="sign_out">signout</string>
    <string name="offline">offline</string>
    <string name="online">online</string>
    <string name="trash">trash</string>
    <string name="shared_with_me">shared_with_me</string>
    <string name="all_notes">all notes</string>
    <string name="no_login">skip login</string>
    <string name="login">login</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="prio1_hint">#1 Priority e.g. new note</string>
    <string name="prio2_hint">#2 Priority e.g. settings</string>
    <string name="prio3_hint">#3 Priority e.g. location</string>
    <string name="prio4_hint">#4 Priority e.g. contact</string>
    <string name="prio5_hint">#5 Priority e.g. signout</string>

</resources>
