<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:cOtherActivity="com.sartainstudios.contacts.ContactsView">

    <item
        android:id="@+id/action_search_main"
        android:title="@string/action_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_add_user_notification"
        android:orderInCategory="100"
        android:title="@string/action_add_user_notification"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new_note"
        android:orderInCategory="100"
        android:title="@string/action_new_note"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/signout"
        android:orderInCategory="100"
        android:title="@string/sign_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/offline"
        android:orderInCategory="100"
        android:title="@string/offline"
        app:showAsAction="never" />

    <item
        android:id="@+id/online"
        android:orderInCategory="100"
        android:title="@string/online"
        app:showAsAction="never" />

    <item
        android:id="@+id/trash"
        android:orderInCategory="100"
        android:title="@string/trash"
        app:showAsAction="never" />

    <item
        android:id="@+id/shared_with_me"
        android:orderInCategory="100"
        android:title="@string/shared_with_me"
        app:showAsAction="never" />

    <item
        android:id="@+id/all_notes"
        android:orderInCategory="100"
        android:title="@string/all_notes"
        app:showAsAction="never" />

</menu>